<resources>
    <string name="app_name">Yora!</string>
    <string name="do_login">Log in</string>
    <string name="yora_login">Yora! Log in</string>
    <string name="yora_register">Yora! Register</string>
    <string name="yora_facebook_login">Facebook Log In</string>
    <string name="yora_google_login">Google Log in</string>
    <string name="user_name_hint">User Name</string>
    <string name="user_password_hint">Password</string>
    <string name="user_email_hint">Email</string>
    <string name="button_register">Register</string>
    <string name="test_login_btn">Test log in</string>
</resources>
