<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include
        layout="@layout/include_login_header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:padding="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            android:singleLine="true"
            android:layout_marginBottom="8dp"
            android:id="@+id/activity_register_userName"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email_hint"
            android:singleLine="true"
            android:layout_marginBottom="8dp"
            android:inputType="textEmailAddress"
            android:layout_below="@id/activity_register_userName"
            android:id="@+id/activity_register_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/activity_register_email"
            android:id="@+id/activity_register_password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_register_password"
            android:text="@string/button_register"
            android:background="@color/md_light_blue_600"
            android:textColor="@color/md_white_1000"
            android:id="@+id/activity_register_registerBtn"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            android:id="@+id/activity_register_progressBar"
            android:layout_centerInParent="true"
            android:layout_alignTop="@id/activity_register_registerBtn"
            android:layout_alignBottom="@id/activity_register_registerBtn"/>

    </RelativeLayout>

</LinearLayout>